* Update Readme * set env to docker-compose * udpdate swagger docs * create isSuperUser middleware * create delete router
